--- a/server/.gitignore
+++ b/server/.gitignore
@@ -69,3 +69,18 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+.DS_Store
+.idea/vcs.xml
+src/.DS_Store
+src/main/.DS_Store
+src/main/java/.DS_Store
+src/main/java/com/.DS_Store
+src/main/java/com/hisuica/.DS_Store
+src/main/java/com/hisuica/cafeapp/.DS_Store
+src/main/java/com/hisuica/cafeapp/cafeApp/.DS_Store
+src/main/resources/static/
+src/main/resources/templates/
+target/classes/com/
+target/generated-sources/
+target/generated-test-sources/
+target/test-classes/
